loxrs_interpreter/src/lox/interpreter/test/e2e/fail/bad.lox
fun bad() {
  var a;
}

print "he y you";
return "at top level";


